# business_management

./: .gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 3062b5400be7_add_roleassignment.py  45739a8fb9da_add_user_id_to_position_modify.py  52a0e206aa75_add_department.py  5308492c9d3b_fix_invite_table.py  66563c59d629_add_user_subord_lazy.py  66e8af69bdfe_fix_ltree.py  6c97de5f5774_add_user_id_to_position_fix2.py  6f2196d55316_lazy.py  7019780c82b8_add_manager_id_to_users.py  74b12b8a69b8_add_task_user_relate.py  75e14017cbe4_add_company_id_to_invite_table.py  7cf2cad11883_make_position_id_nullable.py  8744bbe23731_ltree.py  8ae32ebbf41b_position_description.py  a33e2c09f88d_fix_user_department_relate.py  a6f6045fdb33_add_user_id_to_position_fix.py  a8a33483796e_fix_user_department_relate.py  a9b94c1181e4_add_tasks.py  af7ff7983b34_initial_migration.py  c834cfe4baf9_initial_migration.py  c8a96011bae1_is_admin.py  d950d75dc938_add_status.py  dcb4b1220c26_add_user_id_to_position.py  fd93f57e51fd_add_user_id_to_position_back.py
src/: main.py  settings.py
src/api/v1/auth/: routers.py  services.py
src/api/v1/department/: routers.py  services.py
src/api/v1/tasks/: routers.py  services.py
src/database/: db.py
src/models/: models.py
src/repository/: repository.py  user_repository.py
src/schemas/: schemas.py
src/utils/: core_repository.py  custom_type.py  jwt.py  repository.py  service.py  unit_of_work.py  utils.py
tests/: auth_tests.py  conftest.py
