[tool.poetry]
name = "fa-struct"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.10"
fastapi = "^0.115.4"
SQLAlchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.9.2"}
psycopg2 = "^2.9.10"
SQLAlchemy-Utils = "^0.41.2"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
pydantic-settings = "^2.6.1"
bcrypt = "^4.2.0"
aiosmtplib = "^3.0.2"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pyjwt = "^2.10.0"
pytest = "^8.3.4"
httpx = "^0.28.1"
trio = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
